--- a/products.html
+++ b/products.html
@@ -1,21 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products - Qingdao Best-Integrity</title>
-  <meta name="description" content="Explore our apparel and outwear collections.">
-  <meta property="og:url" content="https://www.bestintegrityglobal.com/products.html">
-</head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Products · Best-Integrity</title><link rel="stylesheet" href="css/style.css"/></head>
 <body>
-  <header><a href="index.html">Home</a> | Products</header>
-  <h1>Our Products</h1>
-  <ul>
-    <li>Outwear</li>
-    <li>Fashion apparel</li>
-    <li>Costumes</li>
-    <li>Pet clothing</li>
-  </ul>
-  <footer><p>&copy; https://www.bestintegrityglobal.com</p></footer>
-</body>
-</html>
+<header class="header">
+  <div class="nav container">
+    <a class="logo" href="index.html">
+      <img src="images/logo.png" alt="logo" onerror="this.style.display='none'"/>
+      <span>Qingdao Best-Integrity Trade Co., Ltd</span>
+    </a>
+    <nav class="navlinks">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="precision.html">Precision</a>
+      <a href="terms.html">Terms</a>
+      <a href="contact.html">Contact</a>
+      <a href="about.html">企业简介</a>
+    </nav>
+  </div>
+</header>
+<main class="container">
+  <h1>Products</h1>
+  <p class="lead">Main: outerwear, pants, denim. Supplementary: stage costumes and pet clothing.</p>
+  <h2 class="section-title">Main Products</h2>
+  <div class="grid">
+    <div class="card"><img src="images/products/main/jacket.jpg" alt=""><div class="meta"><span>Jacket</span><span>WJC-jacket</span></div></div>
+    <div class="card"><img src="images/products/main/jeans.jpg" alt=""><div class="meta"><span>Jeans</span><span>WJC-jeans</span></div></div>
+    <div class="card"><img src="images/products/main/WJC25197.png" alt=""><div class="meta"><span>Outwear</span><span>WJC25197</span></div></div>
+    <div class="card"><img src="images/products/main/WJC25231.png" alt=""><div class="meta"><span>Pants</span><span>WJC25231</span></div></div>
+    <div class="card"><img src="images/products/main/5146.jpg" alt=""><div class="meta"><span>5146</span><span>5146</span></div></div><div class="card"><img src="images/products/main/5234.jpg" alt=""><div class="meta"><span>5234</span><span>5234</span></div></div><div class="card"><img src="images/products/main/93039.jpg" alt=""><div class="meta"><span>93039</span><span>93039</span></div></div><div class="card"><img src="images/products/main/93131.jpg" alt=""><div class="meta"><span>93131</span><span>93131</span></div></div><div class="card"><img src="images/products/main/93134.jpg" alt=""><div class="meta"><span>93134</span><span>93134</span></div></div><div class="card"><img src="images/products/main/93141.jpg" alt=""><div class="meta"><span>93141</span><span>93141</span></div></div>
+  </div>
+  <h2 class="section-title">Supplementary Products</h2>
+  <div class="grid">
+    <div class="card"><img src="images/products/pet/BW-C018.jpg" alt=""><div class="meta"><span>BW-C018</span><span>BW-C018</span></div></div>
+    <div class="card"><img src="images/products/pet/Rs-2305081c.jpg" alt=""><div class="meta"><span>Rs-2305081c</span><span>Rs-2305081c</span></div></div>
+    <div class="card"><img src="images/products/pet/WJCM334.jpg" alt=""><div class="meta"><span>WJCM334</span><span>WJCM334</span></div></div>
+    <div class="card"><img src="images/products/stage/costumes.png" alt=""><div class="meta"><span>Stage Costume</span><span>SC-001</span></div></div>
+  </div>
+</main>
+<footer class="footer">
+  <div class="container small">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
+</footer>
+<script src="js/site.js"></script>
+</body></html>
