--- a/index.html
+++ b/index.html
@@ -1,109 +1,67 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Qingdao Best-Integrity Trade Co.,Ltd | Apparel & Pet Clothing Manufacturer</title>
-  <meta name="description" content="Outerwear, denim and pet clothing. Accurate sampling, flexible MOQ and reliable delivery for international buyers. FOB Qingdao.">
-  <link rel="icon" href="favicon.png">
-  <meta property="og:title" content="Qingdao Best-Integrity Trade Co.,Ltd | Apparel & Pet Clothing Manufacturer">
-  <meta property="og:description" content="Accurate sampling. Flexible MOQ. Reliable delivery.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://example.github.io/BW-Fashion/images/hero.png">
-  <meta name="robots" content="index,follow">
-  <style>
-:root{
-  --bg:#0f172a; --fg:#e6eef8; --muted:#a5b4c7;
-  --accent:#0ea5e9; --card:rgba(255,255,255,.045);
-  --header:#f8fafc; --text:#0b1220; --border:#e5e7eb;
-}
-*{box-sizing:border-box}
-html{scroll-behavior:smooth}
-body{margin:0;background:linear-gradient(180deg,#0b1220,#0f172a);color:var(--fg);
-     font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-.wrap{max-width:1180px;margin:0 auto;padding:0 24px}
-/* Full-width sticky header */
-header{position:sticky;top:0;background:var(--header);border-bottom:1px solid var(--border);z-index:50;width:100%}
-.bar{display:flex;align-items:center;justify-content:space-between;padding:8px 40px}
-.brand{display:flex;align-items:center;gap:14px}
-.brand .name{color:#111827;font-weight:800;font-size:18px}
-.menu a{color:#1f2937;text-decoration:none;margin-left:28px;font-weight:600;letter-spacing:.2px}
-.menu a:hover{color:var(--accent);text-decoration:underline}
-/* Hero + cards */
-.hero{display:grid;grid-template-columns:1.2fr 1fr;gap:28px;align-items:center;padding:40px 0}
-.sub{display:inline-block;font-size:12px;color:#0369a1;background:#e0f2fe;border:1px solid #bae6fd;border-radius:999px;padding:6px 12px}
-h1{font-size:40px;line-height:1.15;margin:12px 0 10px}
-.lead{color:var(--muted);font-size:16px}
-.btn{display:inline-block;margin-top:14px;padding:12px 18px;border-radius:12px;background:linear-gradient(135deg,#22d3ee,#38bdf8);color:#00131b;text-decoration:none;font-weight:800}
-.card{background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:16px;box-shadow:0 10px 30px rgba(0,0,0,.25);padding:18px}
-/* Metrics */
-.metrics{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:18px}
-.metric{background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:14px;text-align:center}
-.metric b{font-size:22px;color:#e6f1ff}
-/* Sections */
-.section{padding:28px 0}
-h2{font-size:22px;margin:0 0 12px}
-h3{font-size:16px;margin:0 0 6px}
-p{color:var(--muted)}
-.grid{display:grid;gap:16px}
-.g3{grid-template-columns:repeat(3,1fr)}
-.g2{grid-template-columns:repeat(2,1fr)}
-.gallery{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-.gallery img{width:100%;border-radius:12px;background:#0b1324}
-.input{width:100%;padding:12px;border-radius:12px;background:#0b1324;border:1px solid rgba(255,255,255,.1);color:var(--fg)}
-.footer{padding:22px 0;color:#9fb0c1;font-size:13px;text-align:center;border-top:1px solid rgba(255,255,255,.08);margin-top:28px}
-/* Responsive */
-@media (max-width:980px){
-  .hero{grid-template-columns:1fr}
-  .menu{display:none}
-  .brand img{height:92px}
-  .gallery{grid-template-columns:1fr 1fr}
-  .g3{grid-template-columns:1fr 1fr}
-  .g2{grid-template-columns:1fr}
-}
-</style>
-  <script type="application/ld+json">{"@context": "https://schema.org", "@type": "Organization", "name": "Qingdao Best-Integrity Trade Co.,Ltd", "url": "https://example.github.io/BW-Fashion/", "email": "fashion@bestintegrityglobal.com", "address": {"@type": "PostalAddress", "streetAddress": "RM1004, Shandong International Trade Mansion, No.51 Taiping Road", "addressLocality": "Qingdao", "addressRegion": "Shandong", "addressCountry": "CN"}}</script>
-  <meta property="og:url" content="https://www.bestintegrityglobal.com">
-</head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>Qingdao Best-Integrity Trade Co., Ltd</title><link rel="stylesheet" href="css/style.css"/></head>
 <body>
-  <header>
-    <div class="bar">
-      <div class="brand">
-        <img src="images/logo_home.png" alt="Company logo - Qingdao Best-Integrity Trade Co.,Ltd" style="height:120px">
-        <div class="name">Qingdao Best-Integrity Trade Co.,Ltd</div>
-      </div>
-      <nav class="menu" aria-label="Primary">
-        <a href="index.html">Home</a>
-        <a href="apparel_en.html#products">Products</a>
-        <a href="apparel_en.html#capabilities">Capabilities</a>
-        <a href="apparel_en.html#terms">Terms</a>
-        <a href="apparel_en.html#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <div class="wrap">
-    <section class="hero" id="home">
-      <div>
-        <span class="sub">Apparel and Pet Clothing Manufacturer in Qingdao, China</span>
-        <h1>Accurate sampling. Flexible MOQ. Reliable delivery.</h1>
-        <p class="lead">We serve international buyers with precise development and dependable schedules. Accurate, on‑time sampling saves development time and speeds time‑to‑market.</p>
-        <a class="btn" href="apparel_en.html#products">Explore Products</a>
-        <div class="metrics" role="list">
-          <div class="metric" role="listitem"><b>15+ yrs</b><div>manufacturing network</div></div>
-          <div class="metric" role="listitem"><b>On‑time</b><div>checkpoint inspections</div></div>
-          <div class="metric" role="listitem"><b>FOB Qingdao</b><div>transparent terms</div></div>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/hero.png" alt="Representative outerwear - quilted black jacket" style="width:100%;border-radius:12px">
-      </div>
-    </section>
-
-    <footer class="footer">
-      © <span id="y"></span> Qingdao Best-Integrity Trade Co.,Ltd
-    </footer>
+<header class="header">
+  <div class="nav container">
+    <a class="logo" href="index.html">
+      <img src="images/logo.png" alt="logo" onerror="this.style.display='none'"/>
+      <span>Qingdao Best-Integrity Trade Co., Ltd</span>
+    </a>
+    <nav class="navlinks">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="precision.html">Precision</a>
+      <a href="terms.html">Terms</a>
+      <a href="contact.html">Contact</a>
+      <a href="about.html">企业简介</a>
+    </nav>
   </div>
-  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
-</body>
-</html>
+</header>
+<main class="container">
+  <section class="hero">
+    <div>
+      <h1>Quality apparel, precise sampling, on-time delivery</h1>
+      <p class="lead">Located in Qingdao, China, we focus on outerwear, working garments, denim, costumes and pet clothing. Trusted by global customers for steady quality and responsive service.</p>
+      <div class="badges" style="margin-top:16px">
+        <span class="badge">Precision sampling</span>
+        <span class="badge">Reliable delivery</span>
+        <span class="badge">Flexible MOQ</span>
+        <span class="badge">Transparent checkpoints</span>
+      </div>
+      <div style="display:flex;gap:12px;margin-top:16px">
+        <a class="button" href="products.html" style="text-decoration:none">Browse Products</a>
+        <button class="button" style="background:#fff;color:#1f2937;border:1px solid #e5e7eb" onclick="openIntro()">弹出企业简介</button>
+      </div>
+    </div>
+    <div><img src="images/factory.jpg" class="kv" alt="factory workshop"></div>
+  </section>
+
+  <section>
+    <h2 class="section-title">Preview · Main Products</h2>
+    <div class="grid">
+      <div class="card"><img src="images/products/main/jacket.jpg" alt=""><div class="meta"><span>Jacket</span><span>WJC-jacket</span></div></div>
+      <div class="card"><img src="images/products/main/jeans.jpg" alt=""><div class="meta"><span>Jeans</span><span>WJC-jeans</span></div></div>
+      <div class="card"><img src="images/products/main/WJC25197.png" alt=""><div class="meta"><span>Outwear</span><span>WJC25197</span></div></div>
+      <div class="card"><img src="images/products/main/WJC25231.png" alt=""><div class="meta"><span>Pants</span><span>WJC25231</span></div></div>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <div class="container small">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
+</footer>
+<script src="js/site.js"></script>
+<div id="intro-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="intro-title" onclick="if(event.target===this)closeIntro()">
+  <div class="modal-panel">
+    <div class="modal-header">
+      <strong id="intro-title">企业简介</strong>
+      <button class="button" onclick="closeIntro()">关闭</button>
+    </div>
+    <div class="modal-body">
+      <p>青岛百旺达贸易有限公司位于青岛市，主要从事服装的开发与出口，涵盖外套、工装、演出服与宠物服装等。大部分产品面向国际品牌。我们以稳定的质量、合理的价格和快捷的交付获得良好口碑。</p>
+      <p>我们重视及时而准确的打样、过程 checkpoints 与如期交付。欢迎客户随时来访，也欢迎到青岛时与我们联系。</p>
+    </div>
+  </div>
+</div>
+</body></html>
