--- a/index.html
+++ b/index.html
@@ -1,67 +1,55 @@
-<!doctype html>
-<html lang="en">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Qingdao Best-Integrity Trade Co., Ltd</title><link rel="stylesheet" href="css/style.css"/></head>
-<body>
-<header class="header">
-  <div class="nav container">
-    <a class="logo" href="index.html">
-      <img src="images/logo.png" alt="logo" onerror="this.style.display='none'"/>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Qingdao Best-Integrity Trade Co., Ltd</title>
+<link rel="stylesheet" href="css/style.css">
+</head><body>
+
+<div class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <img src="images/logo.png" alt="Best-Integrity logo">
       <span>Qingdao Best-Integrity Trade Co., Ltd</span>
     </a>
-    <nav class="navlinks">
+    <nav style="display:flex;gap:8px;margin-left:auto">
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="products.html">Products</a>
       <a href="precision.html">Precision</a>
       <a href="terms.html">Terms</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">企业简介</a>
     </nav>
   </div>
-</header>
-<main class="container">
-  <section class="hero">
+</div>
+
+<div class="container">
+  <div class="hero">
     <div>
-      <h1>Quality apparel, precise sampling, on-time delivery</h1>
-      <p class="lead">Located in Qingdao, China, we focus on outerwear, working garments, denim, costumes and pet clothing. Trusted by global customers for steady quality and responsive service.</p>
-      <div class="badges" style="margin-top:16px">
+      <h1>Quality apparel, precise sampling, on‑time delivery</h1>
+      <p class="lead">Located in Qingdao, China, we focus on outerwear, working garments, garments, denim, costumes and pet clothing. Trusted by global customers for steady quality and responsive service.</p>
+      <div class="badges">
         <span class="badge">Precision sampling</span>
         <span class="badge">Reliable delivery</span>
         <span class="badge">Flexible MOQ</span>
         <span class="badge">Transparent checkpoints</span>
       </div>
-      <div style="display:flex;gap:12px;margin-top:16px">
-        <a class="button" href="products.html" style="text-decoration:none">Browse Products</a>
-        <button class="button" style="background:#fff;color:#1f2937;border:1px solid #e5e7eb" onclick="openIntro()">弹出企业简介</button>
-      </div>
+      <p>
+        <a class="btn" href="products.html">Browse Products</a>
+        <a class="btn" style="background:#64748b;margin-left:8px" href="about.html">About</a>
+      </p>
     </div>
-    <div><img src="images/factory.jpg" class="kv" alt="factory workshop"></div>
-  </section>
+    <div class="hero-visual"><img src="images/factory_hero.jpg" alt="Factory / Hero"></div>
+  </div>
 
-  <section>
-    <h2 class="section-title">Preview · Main Products</h2>
-    <div class="grid">
-      <div class="card"><img src="images/products/main/jacket.jpg" alt=""><div class="meta"><span>Jacket</span><span>WJC-jacket</span></div></div>
-      <div class="card"><img src="images/products/main/jeans.jpg" alt=""><div class="meta"><span>Jeans</span><span>WJC-jeans</span></div></div>
-      <div class="card"><img src="images/products/main/WJC25197.png" alt=""><div class="meta"><span>Outwear</span><span>WJC25197</span></div></div>
-      <div class="card"><img src="images/products/main/WJC25231.png" alt=""><div class="meta"><span>Pants</span><span>WJC25231</span></div></div>
-    </div>
-  </section>
-</main>
-<footer class="footer">
-  <div class="container small">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
-</footer>
-<script src="js/site.js"></script>
-<div id="intro-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="intro-title" onclick="if(event.target===this)closeIntro()">
-  <div class="modal-panel">
-    <div class="modal-header">
-      <strong id="intro-title">企业简介</strong>
-      <button class="button" onclick="closeIntro()">关闭</button>
-    </div>
-    <div class="modal-body">
-      <p>青岛百旺达贸易有限公司位于青岛市，主要从事服装的开发与出口，涵盖外套、工装、演出服与宠物服装等。大部分产品面向国际品牌。我们以稳定的质量、合理的价格和快捷的交付获得良好口碑。</p>
-      <p>我们重视及时而准确的打样、过程 checkpoints 与如期交付。欢迎客户随时来访，也欢迎到青岛时与我们联系。</p>
+  <div class="section">
+    <h2>Preview · Main Products</h2>
+    <div class="card-grid">
+      <div class="card"><figure><img src="images/products/main/5146.jpg" alt=""></figure><div class="meta"><span>5146</span></div></div><div class="card"><figure><img src="images/products/main/5234.jpg" alt=""></figure><div class="meta"><span>5234</span></div></div><div class="card"><figure><img src="images/products/main/93039.jpg" alt=""></figure><div class="meta"><span>93039</span></div></div><div class="card"><figure><img src="images/products/main/93043.jpg" alt=""></figure><div class="meta"><span>93043</span></div></div>
     </div>
   </div>
 </div>
+
+<div class="footer">
+  <div class="container">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
+</div>
+
 </body></html>
