--- a/precision.html
+++ b/precision.html
@@ -1,40 +1,38 @@
-<!doctype html>
-<html lang="en">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Precision · Best-Integrity</title><link rel="stylesheet" href="css/style.css"/></head>
-<body>
-<header class="header">
-  <div class="nav container">
-    <a class="logo" href="index.html">
-      <img src="images/logo.png" alt="logo" onerror="this.style.display='none'"/>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Precision · Best-Integrity</title>
+<link rel="stylesheet" href="css/style.css"></head><body>
+
+<div class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <img src="images/logo.png" alt="Best-Integrity logo">
       <span>Qingdao Best-Integrity Trade Co., Ltd</span>
     </a>
-    <nav class="navlinks">
+    <nav style="display:flex;gap:8px;margin-left:auto">
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="products.html">Products</a>
       <a href="precision.html">Precision</a>
       <a href="terms.html">Terms</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">企业简介</a>
     </nav>
   </div>
-</header>
-<main class="container">
-  <h1>Precision</h1>
-  <div class="split">
-    <div>
-      <ul>
-        <li>Timely and accurate sampling saves significant development time.</li>
-        <li>Cross-checks against tech packs and fit comments reduce iterations.</li>
-        <li>Pre‑production, inline, and final inspections planned as checkpoints.</li>
-        <li>Transparent milestones ensure on-time delivery.</li>
-      </ul>
-    </div>
-    <div><img class="kv" src="images/quality.jpg" alt="quality system"></div>
-  </div>
-</main>
-<footer class="footer">
-  <div class="container small">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
-</footer>
-<script src="js/site.js"></script>
+</div>
+
+<div class="container section">
+  <h2>Precision</h2>
+  <ul>
+    <li>Timely and accurate sampling saves significant development time.</li>
+    <li>Cross-checks against tech packs and fit comments reduce iterations.</li>
+    <li>Pre-production, inline, and final inspections planned as checkpoints.</li>
+    <li>Transparent milestones ensure on-time delivery.</li>
+  </ul>
+  <div class="hero-visual" style="max-width:640px"><img src="images/factory_hero.jpg" alt=""></div>
+</div>
+
+<div class="footer">
+  <div class="container">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
+</div>
+
 </body></html>
