--- a/products.html
+++ b/products.html
@@ -1,45 +1,83 @@
-<!doctype html>
-<html lang="en">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Products · Best-Integrity</title><link rel="stylesheet" href="css/style.css"/></head>
-<body>
-<header class="header">
-  <div class="nav container">
-    <a class="logo" href="index.html">
-      <img src="images/logo.png" alt="logo" onerror="this.style.display='none'"/>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Products · Best-Integrity</title>
+<link rel="stylesheet" href="css/style.css"></head><body>
+
+<div class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <img src="images/logo.png" alt="Best-Integrity logo">
       <span>Qingdao Best-Integrity Trade Co., Ltd</span>
     </a>
-    <nav class="navlinks">
+    <nav style="display:flex;gap:8px;margin-left:auto">
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="products.html">Products</a>
       <a href="precision.html">Precision</a>
       <a href="terms.html">Terms</a>
       <a href="contact.html">Contact</a>
-      <a href="about.html">企业简介</a>
     </nav>
   </div>
-</header>
-<main class="container">
-  <h1>Products</h1>
-  <p class="lead">Main: outerwear, pants, denim. Supplementary: stage costumes and pet clothing.</p>
-  <h2 class="section-title">Main Products</h2>
-  <div class="grid">
-    <div class="card"><img src="images/products/main/jacket.jpg" alt=""><div class="meta"><span>Jacket</span><span>WJC-jacket</span></div></div>
-    <div class="card"><img src="images/products/main/jeans.jpg" alt=""><div class="meta"><span>Jeans</span><span>WJC-jeans</span></div></div>
-    <div class="card"><img src="images/products/main/WJC25197.png" alt=""><div class="meta"><span>Outwear</span><span>WJC25197</span></div></div>
-    <div class="card"><img src="images/products/main/WJC25231.png" alt=""><div class="meta"><span>Pants</span><span>WJC25231</span></div></div>
-    <div class="card"><img src="images/products/main/5146.jpg" alt=""><div class="meta"><span>5146</span><span>5146</span></div></div><div class="card"><img src="images/products/main/5234.jpg" alt=""><div class="meta"><span>5234</span><span>5234</span></div></div><div class="card"><img src="images/products/main/93039.jpg" alt=""><div class="meta"><span>93039</span><span>93039</span></div></div><div class="card"><img src="images/products/main/93131.jpg" alt=""><div class="meta"><span>93131</span><span>93131</span></div></div><div class="card"><img src="images/products/main/93134.jpg" alt=""><div class="meta"><span>93134</span><span>93134</span></div></div><div class="card"><img src="images/products/main/93141.jpg" alt=""><div class="meta"><span>93141</span><span>93141</span></div></div>
-  </div>
-  <h2 class="section-title">Supplementary Products</h2>
-  <div class="grid">
-    <div class="card"><img src="images/products/pet/BW-C018.jpg" alt=""><div class="meta"><span>BW-C018</span><span>BW-C018</span></div></div>
-    <div class="card"><img src="images/products/pet/Rs-2305081c.jpg" alt=""><div class="meta"><span>Rs-2305081c</span><span>Rs-2305081c</span></div></div>
-    <div class="card"><img src="images/products/pet/WJCM334.jpg" alt=""><div class="meta"><span>WJCM334</span><span>WJCM334</span></div></div>
-    <div class="card"><img src="images/products/stage/costumes.png" alt=""><div class="meta"><span>Stage Costume</span><span>SC-001</span></div></div>
-  </div>
-</main>
-<footer class="footer">
-  <div class="container small">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
-</footer>
-<script src="js/site.js"></script>
+</div>
+
+<div class="container">
+  <div class="page-title"><h2>Products</h2>
+  <p class="lead">Main: outerwear, pants, denim. Supplementary: stage costumes and pet clothing.</p></div>
+
+  <h3 class="section">Main Products</h3>
+  <div class="card-grid"><div class="card"><figure><img src="images/products/main/5146.jpg" alt=""></figure><div class="meta"><span>5146</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/5234.jpg" alt=""></figure><div class="meta"><span>5234</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93039.jpg" alt=""></figure><div class="meta"><span>93039</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93043.jpg" alt=""></figure><div class="meta"><span>93043</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93118.jpg" alt=""></figure><div class="meta"><span>93118</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93131.jpg" alt=""></figure><div class="meta"><span>93131</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93134.jpg" alt=""></figure><div class="meta"><span>93134</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/93141.jpg" alt=""></figure><div class="meta"><span>93141</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250501.png" alt=""></figure><div class="meta"><span>WJC250501</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250502.png" alt=""></figure><div class="meta"><span>WJC250502</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250503.jpg" alt=""></figure><div class="meta"><span>WJC250503</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250504.jpg" alt=""></figure><div class="meta"><span>WJC250504</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250505.jpg" alt=""></figure><div class="meta"><span>WJC250505</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250506.jpg" alt=""></figure><div class="meta"><span>WJC250506</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250507.png" alt=""></figure><div class="meta"><span>WJC250507</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250508.png" alt=""></figure><div class="meta"><span>WJC250508</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250509.png" alt=""></figure><div class="meta"><span>WJC250509</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC250510.png" alt=""></figure><div class="meta"><span>WJC250510</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25197.png" alt=""></figure><div class="meta"><span>WJC25197</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25198.png" alt=""></figure><div class="meta"><span>WJC25198</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25199.png" alt=""></figure><div class="meta"><span>WJC25199</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25200.png" alt=""></figure><div class="meta"><span>WJC25200</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25201.png" alt=""></figure><div class="meta"><span>WJC25201</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25202.png" alt=""></figure><div class="meta"><span>WJC25202</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25203.png" alt=""></figure><div class="meta"><span>WJC25203</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25204.png" alt=""></figure><div class="meta"><span>WJC25204</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25231.png" alt=""></figure><div class="meta"><span>WJC25231</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25232.png" alt=""></figure><div class="meta"><span>WJC25232</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25233.png" alt=""></figure><div class="meta"><span>WJC25233</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25235.png" alt=""></figure><div class="meta"><span>WJC25235</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25236.png" alt=""></figure><div class="meta"><span>WJC25236</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25237.png" alt=""></figure><div class="meta"><span>WJC25237</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25238.png" alt=""></figure><div class="meta"><span>WJC25238</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC252390.png" alt=""></figure><div class="meta"><span>WJC252390</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC2525639.png" alt=""></figure><div class="meta"><span>WJC2525639</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC2525862.png" alt=""></figure><div class="meta"><span>WJC2525862</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25293.png" alt=""></figure><div class="meta"><span>WJC25293</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJC25686.png" alt=""></figure><div class="meta"><span>WJC25686</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/WJCM334.jpg" alt=""></figure><div class="meta"><span>WJCM334</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/jacket.jpg" alt=""></figure><div class="meta"><span>jacket</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/main/jeans.jpg" alt=""></figure><div class="meta"><span>jeans</span><span></span></div></div></div>
+
+  <h3 class="section">Supplementary · Pet</h3>
+  <div class="card-grid"><div class="card"><figure><img src="images/products/pet/BW-C018.jpg" alt=""></figure><div class="meta"><span>BW-C018</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/pet/Rs-2305081c.jpg" alt=""></figure><div class="meta"><span>Rs-2305081c</span><span></span></div></div>
+<div class="card"><figure><img src="images/products/pet/WJCM334.jpg" alt=""></figure><div class="meta"><span>WJCM334</span><span></span></div></div></div>
+
+  <h3 class="section">Supplementary · Stage</h3>
+  <div class="card-grid"><div class="card"><figure><img src="images/products/stage/7.jpg" alt=""></figure><div class="meta"><span>7</span><span></span></div></div></div>
+</div>
+
+<div class="footer">
+  <div class="container">© 2025 Qingdao Best-Integrity Trade Co., Ltd</div>
+</div>
+
 </body></html>
